--- a/src/components/TopBar/topBar.css
+++ b/src/components/TopBar/topBar.css
@@ -32,3 +32,32 @@
 .userName {
   color: white;
 }
+
+.logoutModal {
+  display: flex;
+  background-color: #0099ff;
+  width: 300px;
+  height: 100px;
+  position: absolute;
+  right: 10px;
+  top: 60px;
+  border-radius: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+.blueButton {
+  background-color: #003e68;
+  margin: 10px;
+  color: white;
+  width: 250px;
+  height: 40px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  font-family: sans-serif;
+  -webkit-box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.51);
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.51);
+  align-items: center;
+  justify-content: center;
+}
