--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -5,5 +5,6 @@
   flex: 4;
   background-color: #0079ca;
   display: flex;
-  /* flex-direction: column; */
+  height: 100vh;
+  /* flex-dcirection: column; */
 }
