--- a/src/components/TopBar/topBar.css
+++ b/src/components/TopBar/topBar.css
@@ -1,7 +1,7 @@
 .topBar {
   width: 100%;
   height: 50px;
-  background-color: #003e68;
+  background-color: #111111;
   position: sticky;
   top: 0;
 }
@@ -60,4 +60,16 @@
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.51);
   align-items: center;
   justify-content: center;
+}
+.logo {
+  /* display: block; */
+  /* width: 30px; */
+  height: 30px;
+  background-color: #003e68;
+  cursor: pointer;
+  margin-right: 15px;
+}
+.leftContainer {
+  display: flex;
+  align-items: center;
 }
