--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -3,7 +3,7 @@
 }
 .middleContainer {
   flex: 4;
-  background-color: #0079ca;
+  background-color: #555555;
   display: flex;
   height: 100vh;
   /* flex-dcirection: column; */
