--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -25,6 +25,9 @@
   -webkit-box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.51);
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.51);
 }
+.Button:hover {
+  background-color: #525252;
+}
 .progressBar {
   width: 1000px;
 }
