--- a/src/components/SideBar/sideBar.css
+++ b/src/components/SideBar/sideBar.css
@@ -15,11 +15,9 @@
   -webkit-box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.51);
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.51);
 }
-.sideBarButton.active {
-  background-color: #65a2ca;
-}
-.sidebarbutton:hover {
-  background-color: #65a2ca;
+
+.sideBarButton:hover {
+  background-color: #242222;
 }
 .sideBarButtonIcon {
   margin-left: 10px;
